# Mnemosy

./: .gitattributes  .gitignore  LICENSE  README.md
Mnemosy/: CMakeLists.txt  Mnemosy - Verknüpfung.lnk  Mnemosy.sln  Mnemosy.vcxproj  Mnemosy.vcxproj.filters  imgui.ini
Mnemosy/Code/Application/: cmake-ApplicationSourceFiles.cmake
Mnemosy/Code/Application/Include/: Application.h  ApplicationConfig.h
Mnemosy/Code/Application/Src/: Application.cpp  main.cpp
Mnemosy/Code/Dependencies/FulcrumUtils/: CMakeLists.txt
Mnemosy/Code/Dependencies/ImGui/: cmake-ImGuiSourceFiles.cmake
Mnemosy/Code/Dependencies/KTX-Software-main/: cmake-Mnemosy-LibKtxOptions.cmake
Mnemosy/Code/Dependencies/assimp-master/: cmake-Mnemosy-AssimpOptions.cmake
Mnemosy/Code/Dependencies/glad/: CMakeLists.txt
Mnemosy/Code/Dependencies/glfw-3.3.9/: cmake-Mnemosy-GlfwOptions.cmake
Mnemosy/Code/Dependencies/glm/: CMakeLists.txt
Mnemosy/Code/Dependencies/imgui-docking/: CMakeLists.txt
Mnemosy/Code/Dependencies/json-3.9.1/: CMakeLists.txt
Mnemosy/Code/Dependencies/libtiff-master/: CMakeLists.txt  cmake-Mnemosy_libTiff_options.cmake
Mnemosy/Code/Dependencies/lodepng/: CMakeLists.txt
Mnemosy/Code/Dependencies/nlohmannJson/: CMakeLists.txt  cmake-Mnemosy-JsonOptions.cmake
Mnemosy/Code/Dependencies/openCV/: cmake-Mnemosy_OpenCVOptions.cmake
Mnemosy/Code/Dependencies/openexr-release/: cmake-Mnemosy_openExr_options.cmake
Mnemosy/Code/Dependencies/shadinclude/: CMakeLists.txt
Mnemosy/Code/Dependencies/spdlog-1.x/: cmake-Mnemosy-SpdLogOptions.cmake
Mnemosy/Code/Dependencies/stbImage/: CMakeLists.txt
Mnemosy/Code/Dependencies/stbImageRead/: CMakeLists.txt
Mnemosy/Code/Dependencies/stbImageWrite/: CMakeLists.txt
Mnemosy/Code/Dependencies/tinyxml2/: CMakeLists.txt
Mnemosy/Code/Dependencies/utf8cpp/: CMakeLists.txt
Mnemosy/Code/Dependencies/zlib-1.3.1/: CMakeLists.txt
Mnemosy/Code/Engine/: cmake-EngineSourceFiles.cmake
Mnemosy/Code/Engine/Include/: MnemosyConfig.h  MnemosyEngine.h
Mnemosy/Code/Engine/Src/: MnemosyEngine.cpp
Mnemosy/Resources/: Licence-Notice  Mnemosy_licence
Mnemosy/Resources/Data/: GuiUserSettings.mnsydata  LibCollections.mnsydata  LibraryDirectory.mnsydata  MnemosyMaterialLibraryData_LAST_BACKUP.mnsydata  SkyboxAssetsRegistry.mnsydata  UserLibraryDirectories.mnsydata  UserSettingsData.mnsydata  UserSettingsData_default.mnsydata  skyboxQuickselectRegistryData.mnsydata  test.json
Mnemosy/Resources/Data/DocumentationTextFiles/: doc_aboutMnemosy.txt  doc_additionalInformation.txt  doc_gettingStarted.txt  doc_keymapControlls.txt
Mnemosy/Resources/Data/UserSettings/: exportSettings.mnsydata  guiViewportsSettings.mnsydata  renderSettings.mnsydata  sceneSettings.mnsydata
Mnemosy/Resources/Fonts/: Roboto-Licence-NOTICE
Mnemosy/Resources/Logs/: Mnemosy_Session_Log.txt
Mnemosy/Resources/Meshes/: Forward-z.fbx  Gizmo.fbx  SuzanneSmooth.fbx  TestObj.fbx  TestScene.fbx  UnitCube.fbx  UnitSphereSmooth.fbx  icoSphere.fbx  mnemosy_directional_light_mesh.fbx  mnemosy_point_light_mesh.fbx  mnemosy_skybox_generation_mesh.fbx  mnemosy_skybox_render_mesh.fbx  pointLightMesh.fbx  sphere.fbx  unitPlane.fbx
Mnemosy/Resources/Meshes/NotNeeded/: SuzanneFlat.fbx  Test.fbx  TestScene.fbx  UnitCube.fbx  UnitSphereSmooth.fbx  unitPlane.fbx
Mnemosy/Resources/Meshes/PreviewMeshes/: mnemosy_previewMesh_cube.fbx  mnemosy_previewMesh_cylinder.fbx  mnemosy_previewMesh_fabric.fbx  mnemosy_previewMesh_mnemosy.fbx  mnemosy_previewMesh_plane.fbx  mnemosy_previewMesh_sphere.fbx  mnemosy_previewMesh_suzanne.fbx
Mnemosy/Resources/Shaders/: fallback.frag  fallback.vert  gizmo.frag  gizmo.vert  imageBasedLighting.frag  imageBasedLighting.vert  light.frag  light.vert  pbrFragment.frag  pbrMeshFragment.frag  pbrVertex.vert  skybox.frag  skybox.vert  skybox_fallback.frag  skybox_fallback.vert  textureGeneration.frag  textureGeneration.vert  unlitMaterial.frag  unlitMaterial.vert  unlitTexView.frag
Mnemosy/Resources/Shaders/KeepStored/: pbrVert_MESH.glsl
Mnemosy/Resources/Shaders/includes/: agx.glsl  colorFunctions.glsl  lighting.glsl  mathFunctions.glsl  pbrLightingTerms.glsl  samplePbrMaps.glsl
Mnemosy/Resources/Textures/: ExportTest2_linear.ktx2  ExportTest_linear.ktx2  UV_Grid_RGBA_16bpp_1k.tif  UV_Grid_RGB_16bpp_1k.tif  brown_photostudio.hdr  default_thumbnail.ktx2  default_thumbnail_skybox.ktx2  default_thumbnail_unlit.ktx2  ibl_brdfLut_Texture.hdr  spruit_sunrise.hdr  uvGrid.ktx2
Mnemosy/Resources/Textures/Cubemaps/: 1_Default_Cubemaps_LICENSE.txt  Belfast Sunset.mnsydata  Belfast Sunset_cubeColor.ktx2  Belfast Sunset_cubeIrradiance.ktx2  Default_Cubemaps_LICENSE.txt  (+41 more)
Mnemosy/Solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  MnemosyApplication.sln  MnemosyApplication.vcxproj  MnemosyApplication.vcxproj.filters  MnemosyApplicationConfig.cmake  MnemosyApplicationConfigVersion.cmake  MnemosyApplicationTargets.cmake  MnemosyEngine.vcxproj  MnemosyEngine.vcxproj.filters  OpenCVConfig.cmake  OpenCVModules.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini  opencv_data_config.hpp  opencv_python_config.cmake  opencv_tests_config.hpp  setup_vars.cmd
Mnemosy/dependencies/lib/: glfw3.lib
Mnemosy/fbx/: Arrow.fbx  ArrowX.fbx  ArrowZ.fbx  Gizmo.fbx  Test.fbx
Mnemosy/src/: config.h  glad.c  main.cpp
Mnemosy/src/Input/: InputSystem.cpp  InputSystem.h  SceneInputController.cpp  SceneInputController.h
Mnemosy/src/controller/: App.cpp  App.h  CameraController.cpp  CameraController.h  InputHandler.cpp  InputHandler.h  MeshRenderer.cpp  MeshRenderer.h  ModelLoader.h  SceneRenderer.cpp  SceneRenderer.h
Mnemosy/src/model/: Camera.cpp  Camera.h  Model.h  Object.h  SceneObject.cpp
Mnemosy/src/shaders/: pbrFragment.frag  skybox.frag
Mnemosy/src/view/: Cubemap.h  GraphicalUserInterface.cpp  GraphicalUserInterface.h  MeshData.h  ModelData.h  PbrMaterial.cpp  Shader.h  Texture.h  pbrMaterial.h
(+1124 files in other folders)
